--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "google-map-react": "^2.1.9",
     "images": "^3.2.3",
     "react": "^17.0.1",
     "react-burger-menu": "^2.9.0",
