--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "google-map-react": "^2.1.9",
     "images": "^3.2.3",
     "react": "^17.0.1",
     "react-burger-menu": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-flexbox-grid": "^2.1.2",
+    "react-google-maps": "^9.4.5",
     "react-images": "^1.1.7",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
